Oppgraderer til Spring Boot 4.0.x og tar inn endringer for at prosjektet skal bygge